working on the swrl example

--- a/reformulation-core/src/main/resources/it/unibz/krdb/obda/owlrefplatform/core/QuestDefaults.properties
+++ b/reformulation-core/src/main/resources/it/unibz/krdb/obda/owlrefplatform/core/QuestDefaults.properties
@@ -102,5 +102,11 @@ keep_alive=true
 
 H2LOCATION=h2folder/
 
+##########################################
+# SWRL
+##########################################
+SWRL_ENTAIILMENT=FALSE
+
+
 
 
