upgrade jgrapht to 0.9.0
old version 0.8.3:
                               <groupId>net.sf.jgrapht</groupId>
                               <artifactId>jgrapht</artifactId>
                               <version>0.8.3</version>

new version 0.9.0:
                               <groupId>org.jgrapht</groupId>
                               <artifactId>jgrapht-core</artifactId>
                               <version>0.9.0</version>

--- a/reformulation-core/pom.xml
+++ b/reformulation-core/pom.xml
@@ -48,9 +48,9 @@
 			<artifactId>sesame-queryparser-sparql</artifactId>
 		</dependency> 
 
- 		<dependency>
-  			<groupId>net.sf.jgrapht</groupId>
-  			<artifactId>jgrapht</artifactId>
+		<dependency>
+			<groupId>org.jgrapht</groupId>
+			<artifactId>jgrapht-core</artifactId>
 		</dependency>
 		
 		<dependency>
