--- a/pom.xml
+++ b/pom.xml
@@ -266,10 +266,11 @@
 				<artifactId>xercesImpl</artifactId>
 				<version>2.7.1</version>
 			</dependency>
+			
 			<dependency>
-  				<groupId>net.sf.jgrapht</groupId>
-  				<artifactId>jgrapht</artifactId>
-  				<version>0.8.3</version>
+  				<groupId>org.jgrapht</groupId>
+  				<artifactId>jgrapht-core</artifactId>
+  				<version>0.9.0</version>
 			</dependency>
 			<dependency>
 				<groupId>jgraph</groupId>
