* First veresion of the translator of SWRL to OWL 2 QL

--- a/quest-sesame/pom.xml
+++ b/quest-sesame/pom.xml
@@ -125,6 +125,10 @@
 			<scope>test</scope>
 		</dependency>
 
+		<dependency>
+			<groupId>org.apache.directory.studio</groupId>
+			<artifactId>org.apache.commons.logging</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
